--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -1501,19 +1501,19 @@
 
     function ReportEventBind() {
         $('#ReportPDF').on('click', function () {
-            ToReport(1);
+            ToReport(true);
         });
 
         $('#ReportExcel').on('click', function () {
-            ToReport(0);
+            ToReport(false);
         });
 
         $('#ReportAllPDF').on('click', function () {
-            ToAllReport(1);
+            ToAllReport(true);
         });
 
         $('#ReportAllExcel').on('click', function () {
-            ToAllReport(0);
+            ToAllReport(false);
         });
 
 
@@ -1533,16 +1533,34 @@
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify({ ID: $('#Detail_ID').val(), No: $('#Detail_No').val(), type: type, IsToPDF: IsToPDF}),
             async: true,
-            success: function (data) {
-                if (data.Result) {
-                    window.location.href = data.reportPath;
+            processData: false,
+            xhrFields: {
+                responseType: 'blob' // 告訴瀏覽器接收二進位數據
+            },
+            success: function (data, status, xhr) {
+                // 從 Headers 中獲取檔案名稱
+                var disposition = xhr.getResponseHeader('Content-Disposition');
+                var filename = 'DefaultReport.pdf'; // 預設檔名
+
+                if (disposition && disposition.indexOf('attachment') !== -1) {
+                    var filenameRegex = /filename[^;=\n]*=(['"]?)([^'"\n]*)\1?/;
+                    var matches = filenameRegex.exec(disposition);
+                    if (matches != null && matches[2]) {
+                        filename = matches[2];
+                    }
                 }
-                else {
-                    msg.WithError(data.ErrMsg);
-                }
+
+                // 使用 Blob 觸發下載
+                var blob = new Blob([data], { type: 'application/pdf' });
+                var link = document.createElement('a');
+                link.href = window.URL.createObjectURL(blob);
+                link.download = filename; // 使用後端指定的檔名
+                link.click();
+                window.URL.revokeObjectURL(link.href);
             },
             error: function (xhr, ajaxOptions, thrownError) {
                 console.log(xhr.responseText);
+                msg.WithError("Error generating report.");
             }
         });
     }
