--- a/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Detail.cshtml
@@ -212,7 +212,7 @@
                                     <td>
                                         <h4 id="PDF" style=" margin-right: 1em; width: 6vw;">
                                             <img src="~/Image/Icon/PDF.png" width="30" />
-                                            PDF
+                                            PDF(Excel)
                                         </h4>
                                     </td>
                                     <td>
