--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
@@ -136,7 +136,7 @@
                                         <td>
                                             <h4 id="PDF" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/PDF.png" width="30" />
-                                                PDF
+                                                PDF(Excel)
                                             </h4>
                                         </td>
                                         <td style="width:6vw;">
