--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -198,7 +198,7 @@
                                         <td>
                                             <h4 id="PDF" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/PDF.png" width="40" />
-                                                PDF
+                                                PDF(Excel)
                                             </h4>
                                         </td>
                                         <td>
