--- a/Quality/Quality/Areas/BulkFGT/Views/SalivaFastnessTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SalivaFastnessTest/Index.cshtml
@@ -334,7 +334,7 @@
                         <div class="buttonAreaItem">
                             <h4 id="PDF" class="toolBarItem" style=" margin-right: 1em;">
                                 <img src="~/Image/Icon/PDF.png" width="30" />
-                                PDF
+                                PDF(Excel)
                             </h4>
                         </div>
                         <div class="buttonAreaItem">
