--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -204,14 +204,14 @@
                                                     </tr>
                                                     <tr>
                                                         <td style="text-align: center;">
-                                                            <input id="ReportPDF" type="button" value="PDF">
+                                                            <input id="ReportPDF" type="button" value="PDF(Excel)">
                                                             <input id="ReportExcel" type="button" value="Excel" style="margin: 0 1em;">
                                                             <input id="ReportExit" type="button" value="Exit">
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td style="text-align: center;">
-                                                            <input id="ReportAllPDF" type="button" value="All PDF">
+                                                            <input id="ReportAllPDF" type="button" value="All PDF(Excel)">
                                                             <input id="ReportAllExcel" type="button" value="All Excel" style="margin: 0 1em;">
                                                         </td>
                                                     </tr>
